<resources>
    <string name="app_name">Sell Online</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading…</string>
    <string name="viewed_by">Viewed By </string>
    <string name="add">Add</string>
    <string name="my_posts">My Posts</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="about">About</string>
    <string name="change_password">Change Password</string>
    <string name="share">Share</string>
    <string name="create_post">Create New Post</string>
    <string name="post_title">Post Title</string>
    <string name="post_content">Post Content</string>
    <string name="upload_image">Upload Image</string>
    <string name="notifications">Notifications</string>
    <string name="no_new_notifications">No New Notifications</string>
    <string name="edit_post">Edit Post</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="post_images">Post Images</string>
    <string name="search_for_posts">Search Posts</string>>
    <string name="messages">Messages</string>>
    <string name="post_status_open">Current Status: Open (Anyone can see the post and negotiate you)</string>
    <string name="post_status_closed">Current Status: Sold (no one can see the post except you and no longer negotiate)</string>

    <string name="preference_key" translatable="false">sell_online_store</string>
<!--    <string name="api_url" translatable="false">http://192.168.1.2:80/sell_online/v1/</string>-->
    <string name="api_url" translatable="false">http://192.168.1.2:5000/v1/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="set_post_as_sold">Set Post As Sold</string>
    <string name="delete_post">Delete Post</string>
    <string name="send">Send</string>
    <string name="write_message_here">Write Message Here...</string>
    <string name="send_message">Send Message</string>
    <string name="create_new_account">Create New Account</string>
    <string name="display_name">Display Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="district">District</string>
    <string name="phone_number">Phone Number</string>
    <string name="images">Images</string>
    <string name="choose_image">Choose Image</string>
    <!--    <string name="api_url" translatable="false">http://localhost:7283/v1/</string>-->
</resources>