<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/about" android:id="@+id/about"/>
    <item android:title="@string/change_password" android:id="@+id/change_password"/>
    <item android:title="@string/log_out"
        android:id="@+id/log_out_btn"/>
    <item android:title="@string/messages"
        android:icon="@drawable/ic_baseline_message_24"
        android:id="@+id/messages"
        app:showAsAction="ifRoom"/>
    <item android:title="@string/search_for_posts"
        android:icon="@drawable/ic_baseline_search_24"
        android:id="@+id/search_posts"
        app:showAsAction="ifRoom"/>
    <item android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:id="@+id/notifications"
        app:showAsAction="ifRoom"/>
</menu>