<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/heading1"
                    android:text="@string/app_name"
                    android:layout_gravity="center"/>

                <EditText
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/txt_email"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:id="@+id/txt_password"
                    android:inputType="textPassword"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/btn_login"
                    android:textSize="18sp"
                    android:padding="12dp"
                    android:text="@string/login"/>

            </LinearLayout>

        </ScrollView>

</RelativeLayout>